# LinesickDAW

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  DONTREADME.md  LICENSE  README.md  VERSION.md
media/: Linesick
src/: Main.cpp  Main.qml
